--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,6 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    - name: Debug - List Repository Files
+      run: "ls -R"
+
+    - name: Show Working Directory
+      run: "pwd"
+
     
     - name: Set up JDK 17
       uses: actions/setup-java@v4
