--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,14 +14,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-    - name: Debug - List Repository Files
-      run: "ls -a"
-
-    - name: Show Working Directory
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        ref: jenk
+    
+    - name: Show directory
       run: "pwd"
 
-    
+    - name: List files
+      run: "ls -al"
+      
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
@@ -31,10 +34,6 @@ jobs:
 
     - name: Show Java version
       run: "java -version"
-
-    - name: Checkout code
-      uses: actions/checkout@v4
-
 
     - name: Show dikrectory
       run: "pwd"
