--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,12 +11,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        ref: jenk
+    - uses: actions/checkout@v4
       
     - name: Set up JDK 17
       uses: actions/setup-java@v4
